# figure-agent

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  ILLUSTRATORS_HAND_design.md  LICENSE  NOTICE  README.md  pyproject.toml
plugins/figure-agent/: .mcp.json  AGENTS.md  CHANGELOG.md  CHANGELOG_LEGACY.md  CLAUDE.md  README.md  REVIEW_PATCH_PLAN.md  REVIEW_PATCH_PLAN_v2.md  REVIEW_PATCH_PLAN_v3.md  _known_false_positives.yaml  pyproject.toml
plugins/figure-agent/.claude-plugin/: plugin.json
plugins/figure-agent/.ralph/: PROMPT.md
plugins/figure-agent/benchmarks/: failure_first_capability_decision.yaml  hybrid_pilot_source.yaml  llm_failure_corpus.yaml  llm_failure_sources.yaml  quality_suites.yaml  visual_attribution_suite.yaml
plugins/figure-agent/commands/: fig_adjudicate.md  fig_closeout.md  fig_compile.md  fig_context_pack.md  fig_critique.md  fig_drive.md  fig_e2e_smoke.md  fig_export.md  fig_extract.md  fig_ground.md  fig_improve.md  fig_loop.md  fig_new.md  fig_preview_select.md  fig_prompt.md  fig_queue.md  fig_queue_run.md  fig_review.md  fig_run.md  fig_status.md
plugins/figure-agent/docs/: architecture-overview.md  architecture-v0.10-convention-context-spine.md  architecture-v0.11-global-quality-search-loop.md  architecture-v0.12-quality-search-execution-plan.md  architecture-v0.13-experience-loop-reward-integrity.md  architecture-v0.14-convergence-contract.md  architecture-v0.2-proposal.md  architecture-v0.2.1-l5_5-export-critic.md  architecture-v0.3-briefing-semantic-grounding.md  architecture-v0.3-llm-figure-quality-judgment.md  architecture-v0.3-snippet-library.md  architecture-v0.4-build-perception-pack.md  architecture-v0.4.1-build-perception-pack.md  architecture-v0.4.2-perception-data-only.md  architecture-v0.5-per-panel-reference-workflow.md  authoring-rules-pair001.md  authoring-rules-project.md  briefing-semantic-schema-v1.md  critique-evaluation-rubric-v1.md  design-v0.1.md  execution-plan.md  external-vision-review.md  figure-agent.md  figure-design-philosophy.md  golden-target-001-retrospective.md  golden-target-trap-depth-picture.md  humanizer-layer-v1.md  macro-audit.md  mcp-facade-design.md  multi-lens-qa-recipe.md  paper_figure_map.yaml  product-spec.md  quality-kernel-goal.md  roadmap-2026-06-manuscript-figures.md  roadmap-2026-07-figure-quality-system.md  roadmap-layer3-6.md  roadmap-v0.1.7-selection-notes.md  snippet-vendor-candidates.md  style-pack-catalog.md  subregion-iteration-tool.md  (+5 more)
plugins/figure-agent/mcp/: __init__.py  _handlers_benchmark.py  _handlers_candidates.py  _handlers_compile.py  _handlers_misc.py  _handlers_status.py  _legacy_server.py  _protocol.py  _resources.py  _runtime.py  _validation.py  figure_agent_server.py  server_impl.py
plugins/figure-agent/prompts/: llm_author_tikz.md
plugins/figure-agent/scripts/: add_volume_shading.py  aesthetic_intent.py  aesthetic_objective.py  agent_next.py  attempt_local_post_review.py  attempt_local_post_review_authority.py  attempt_local_post_review_response.py  attempt_local_repair_binding.py  attempt_store.py  audit_evidence_graph.py  audit_evidence_summary.py  authoring_context_pack.py  authoring_rules.py  (+231 more)
(+2533 files in other folders)
