[project]
name = "figure-agent"
version = "0.9.3"
description = "Claude Code plugin: paper-figure quality kernel for semantic TikZ compile, checks, export, and reproducibility."
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.4",
    "pdfplumber>=0.11.4",
    "pillow>=12.2.0",
    "pyyaml>=6.0.3",
    "scipy>=1.12.0",
    "svgpathtools>=1.6.1",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "render: requires TeX/render/OCR system tools",
    "quarantine: covers inert-on-real-figure surfaces such as retired SVG-semantic history and the composition stack. Still runs by default; the marker only lets it be filtered.",
]

[tool.setuptools]
packages = []
py-modules = []
# Intentional: figure-agent is not pip-installable.
# It is distributed as a Claude Code plugin via claude plugin install.

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-timeout>=2.4.0",
    "ruff>=0.15.5",
]
